[package]
name = "emotes-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = "1"
sea-orm = "0.5"
actix-web = "3.3"
uuid = { version = "0.8", features = [ "serde" ] }
async-graphql = "3.0.25"
