[package]
name = "emotes-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = "1"
sqlx = { version = "0.5", features = [ "postgres", "runtime-async-std-rustls", "uuid", "chrono", "offline", "json" ] }
actix-web = "3.3"
uuid = { version = "0.8", features = [ "serde" ] }
chrono = "0.4.19"
async-graphql = { version = "3.0", features = ["uuid", "chrono"] }
# TODO add forked vips-sys support
