[package]
name = "emotes-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = "1"
sqlx = { version = "0.5", features = [ "postgres", "runtime-async-std-rustls", "uuid", "chrono", "offline", "json" ] }
actix-web = "4.0.0-beta"
uuid = { version = "0.8", features = [ "serde" ] }
chrono = { version = "0.4", features = ["serde"] }
async-graphql = { version = "3.0", features = ["uuid", "chrono"] }
async-graphql-actix-web = "3"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
lazy_static = "1"
serde_json = "1"
async-trait = "0.1"
actix-cors = "0.6.0-beta"
http = "0.2"
base64 = "0.13"
# TODO add forked vips-sys support
